# openminion-eval

./: .gitignore  .pre-commit-config.yaml  API_COMPATIBILITY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  conftest.py  pyproject.toml
.github/workflows/: quality.yml  release.yml
docs/: README.md  artifacts-and-manual-grading.md  ci-recipes.md  cleanup-workflow.md  code-quality-enforcement.md  engineering-patterns.md  eval-families.md  getting-started.md  memory-context-scorecard.md  memory-effectiveness.md  source-tree-owner-map.md  standalone-claim-alignment.md  testing-and-validation.md
docs/reference/: certification-readiness-matrix.md  eval-cases.md  eval-families.md  standalone-claim-alignment.md
examples/: basic_usage.py  test_pytest_recipe.py
scripts/: check_release_package.py  release_check.py  validate_commit_message.py  validate_quality_patterns.py
scripts/baselines/: broad_exception_baseline.tsv  filename_underscore_hygiene.tsv  helper_duplicates_baseline.tsv  method_loc_baseline.tsv  path_structure_hygiene.tsv
src/openminion_eval/: README.md  __init__.py  __main__.py  boundary_artifacts.py  cli.py  config.py  constants.py  datasets.py  family_registry.py  family_support.py  integration_quarantine.py  interfaces.py  manual.py  paths.py  reports.py  runner.py  schemas.py  scorer.py  subject_adapters.py  suite.py  suite_artifacts.py  suite_selection.py
tests/eval/: memory_quality_eval.py  provider_certification_matrix.py  provider_certification_support.py  test_boundary_artifact_contracts.py  test_cli.py  test_closure_eval.py  test_conftest_cleanup.py  test_dataset_loader.py  test_eval.py  test_eval_adjacent_owner_dispositions.py  (+37 more)
(+145 files in other folders)
